--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xq/base",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "base",
   "main": "src/index.js",
   "publishConfig": {
@@ -20,6 +20,7 @@
     "@xq/api": "^0.2.4",
     "@xq/component": "^0.3.4",
     "@xq/image": "^0.2.2",
+    "@xq/log": "^0.0.1",
     "@xq/server": "^1.1.6",
     "moment": "^2.29.1"
   }
