--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@lr17/lr",
   "version": "1.0.2",
   "description": "lr",
-  "main": "index.js",
+  "main": "src/index.js",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
