--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "upload": "sh ./upload.sh"
+    "upload": "sh ./upload.sh",
+    "test": "node ./test/index.js --trace-warnings"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "files": [
     "src/"
   ],
+  "type": "module",
   "author": "Wmileo",
   "license": "ISC",
   "dependencies": {},
